force-app/main/default/objects/Location_Address__c/Location_Address__c.object-meta.xml
<CustomObject>
    <description>Tracks the location addresses for clients, vendors and OSG. Global data set that can link to one or more Accounts.</description>
    <label>Location Address</label>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Location Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>