force-app/main/default/objects/Location_Address__c/fields/Address_1__c.field-meta.xml
<CustomField>
    <fullName>Address_1__c</fullName>
    <description>Captures the street address of the location.</description>
    <inlineHelpText>Indicates the street address of the location.</inlineHelpText>
    <label>Address 1</label>
    <type>TextArea</type>
</CustomField>