force-app/main/default/objects/Location_Address__c/fields/Address_2__c.field-meta.xml
<CustomField>
    <fullName>Address_2__c</fullName>
    <description>Captures the additional street address of the location.</description>
    <inlineHelpText>Indicates the additional street address of the location.</inlineHelpText>
    <label>Address 2</label>
    <type>TextArea</type>
</CustomField>