force-app/main/default/objects/Location_Address__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Concatenates the address fields.</description>
    <formula>Address_1__c +&quot; &quot;+  Address_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Concatenates the address fields.</inlineHelpText>
    <label>Address</label>
    <type>Text</type>
</CustomField>