force-app/main/default/objects/Location_Address__c/fields/Cancelation_Policy__c.field-meta.xml
<CustomField>
    <fullName>Cancelation_Policy__c</fullName>
    <description>Captures the location&apos;s cancellation policy.</description>
    <inlineHelpText>Indicates the location&apos;s cancellation policy.</inlineHelpText>
    <label>Cancelation Policy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>