force-app/main/default/objects/Location_Address__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Captures the city of the location.</description>
    <inlineHelpText>Indicates the city of the location.</inlineHelpText>
    <label>City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>