force-app/main/default/objects/Location_Address__c/fields/Classroom_Size__c.field-meta.xml
<CustomField>
    <fullName>Classroom_Size__c</fullName>
    <description>Captures the classroom size of the location.</description>
    <inlineHelpText>Indicates the classroom size of the location.</inlineHelpText>
    <label>Classroom Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>