force-app/main/default/objects/Location_Address__c/fields/Count_of_Shipping_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Shipping_Addresses__c</fullName>
    <label>Count of Shipping Addresses</label>
    <summaryFilterItems>
        <field>Account_Address__c.Type__c</field>
        <operation>equals</operation>
        <value>Shipping Address</value>
    </summaryFilterItems>
    <summaryForeignKey>Account_Address__c.Location_Address__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>