force-app/main/default/objects/Location_Address__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <formula>CASE( Country__c , 
&quot;Canada&quot;, &quot;CA&quot;, 
&quot;United States&quot;, &quot;US&quot;, 
&quot;&quot;)</formula>
    <label>Country Code</label>
    <type>Text</type>
</CustomField>