force-app/main/default/objects/Location_Address__c/fields/Created_By_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created By Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Location Addresses</relationshipLabel>
    <relationshipName>Location_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>