force-app/main/default/objects/Location_Address__c/fields/Directions__c.field-meta.xml
<CustomField>
    <fullName>Directions__c</fullName>
    <description>Captures the directions to a location from a general starting point.</description>
    <inlineHelpText>Indicates the directions to a location from a general starting point.</inlineHelpText>
    <label>Directions</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>