force-app/main/default/objects/Location_Address__c/fields/Full_LocationAddressId__c.field-meta.xml
<CustomField>
    <fullName>Full_LocationAddressId__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Full_LocationAddressId</label>
    <type>Text</type>
</CustomField>