force-app/main/default/objects/Location_Address__c/fields/Has_Valid_Data__c.field-meta.xml
<CustomField>
    <fullName>Has_Valid_Data__c</fullName>
    <formula>IF(
AND(
 NOT(ISBLANK(Address_1__c)),
 NOT(ISBLANK(City__c)),
 NOT(ISPICKVAL(Province__c, &quot;&quot;)),
 NOT(ISBLANK(Postal_Code__c)),
 NOT(ISPICKVAL(Country__c, &quot;&quot;))
),
true,
false
)</formula>
    <label>Has Valid Data</label>
    <type>Checkbox</type>
</CustomField>