force-app/main/default/objects/Location_Address__c/fields/IHTPOSHT__c.field-meta.xml
<CustomField>
    <fullName>IHTPOSHT__c</fullName>
    <description>Flag showing In-House, 3rd Party or On-site of this location</description>
    <inlineHelpText>Flag showing In-House, 3rd Party or On-site of this location</inlineHelpText>
    <label>IHTPOSHT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IH</fullName>
            </value>
            <value>
                <fullName>3P</fullName>
            </value>
            <value>
                <fullName>OS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>