force-app/main/default/objects/Location_Address__c/fields/Location_Address__c.field-meta.xml
<CustomField>
    <fullName>Location_Address__c</fullName>
    <description>Concatenates the entire address fields.</description>
    <formula>Address__c + BR() + City__c + &quot; &quot;+ TEXT(Province__c) + BR() + Postal_Code__c + BR() + TEXT(Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Concatenates the entire address fields.</inlineHelpText>
    <label>Location Address</label>
    <type>Text</type>
</CustomField>