force-app/main/default/objects/Location_Address__c/fields/Location_Code__c.field-meta.xml
<CustomField>
    <fullName>Location_Code__c</fullName>
    <description>Captures the location code used for internal identification.</description>
    <inlineHelpText>Indicates the location code used for internal identification.</inlineHelpText>
    <label>Location Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>