force-app/main/default/objects/Location_Address__c/fields/Location_Notes__c.field-meta.xml
<CustomField>
    <fullName>Location_Notes__c</fullName>
    <description>Captures general details about a location.</description>
    <inlineHelpText>Indicates general details about a location.</inlineHelpText>
    <label>Location Notes</label>
    <type>TextArea</type>
</CustomField>