force-app/main/default/objects/Location_Address__c/fields/Location_Status__c.field-meta.xml
<CustomField>
    <fullName>Location_Status__c</fullName>
    <description>Captures the current status of the location. Used for lookups to limit inactive addresses.</description>
    <inlineHelpText>Indicates the current status of the location. Used for lookups to limit inactive addresses.</inlineHelpText>
    <label>Location Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>