force-app/main/default/objects/Location_Address__c/fields/Location_Type__c.field-meta.xml
<CustomField>
    <fullName>Location_Type__c</fullName>
    <description>Captures the type of location the address is used for.</description>
    <inlineHelpText>Indicates the type of location the address is used for.</inlineHelpText>
    <label>Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Address</fullName>
            </value>
            <value>
                <fullName>Classroom Address</fullName>
            </value>
            <value>
                <fullName>Third Party Address</fullName>
            </value>
            <value>
                <fullName>Vendor Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>