force-app/main/default/objects/Location_Address__c/fields/Map__c.field-meta.xml
<CustomField>
    <fullName>Map__c</fullName>
    <description>Captures the image map to the Location</description>
    <inlineHelpText>Indicates the image map to the Location</inlineHelpText>
    <label>Map</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>