force-app/main/default/objects/Location_Address__c/fields/Non_Billing_Locations__c.field-meta.xml
<CustomField>
    <fullName>Non_Billing_Locations__c</fullName>
    <label>Non-Billing Locations</label>
    <summaryFilterItems>
        <field>Account_Address__c.Type__c</field>
        <operation>notEqual</operation>
        <value>Billing Address</value>
    </summaryFilterItems>
    <summaryForeignKey>Account_Address__c.Location_Address__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>