force-app/main/default/objects/Location_Address__c/fields/Parking_Notes__c.field-meta.xml
<CustomField>
    <fullName>Parking_Notes__c</fullName>
    <description>Captures details about parking details at a location</description>
    <inlineHelpText>Indicates details about parking details at this location</inlineHelpText>
    <label>Parking Notes</label>
    <type>TextArea</type>
</CustomField>