force-app/main/default/objects/Location_Address__c/fields/Personal_Protective_Equipment_PPE__c.field-meta.xml
<CustomField>
    <fullName>Personal_Protective_Equipment_PPE__c</fullName>
    <description>Captures details about what PPE is required for this location</description>
    <inlineHelpText>Indicates details about what PPE is required for this location</inlineHelpText>
    <label>Personal Protective Equipment (PPE)</label>
    <type>TextArea</type>
</CustomField>