force-app/main/default/objects/Location_Address__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>Captures the postal code of the location.</description>
    <inlineHelpText>Indicates the postal code of the location.</inlineHelpText>
    <label>Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>