force-app/main/default/objects/Location_Address__c/fields/Room_Rental_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Room_Rental_Pricing__c</fullName>
    <description>Captures the room rental price for applicable locations.</description>
    <inlineHelpText>Indicates the room rental price (if applicable)</inlineHelpText>
    <label>Room Rental Pricing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>