force-app/main/default/objects/Location_Address__c/fields/Training_Room_Access_Details__c.field-meta.xml
<CustomField>
    <fullName>Training_Room_Access_Details__c</fullName>
    <description>Captures general details about a training room</description>
    <inlineHelpText>Indicates general details about a training room</inlineHelpText>
    <label>Training Room Access Details</label>
    <type>TextArea</type>
</CustomField>