force-app/main/default/objects/Location_Address__c/fields/Use_Count__c.field-meta.xml
<CustomField>
    <fullName>Use_Count__c</fullName>
    <label>Use Count</label>
    <summaryForeignKey>Account_Address__c.Location_Address__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>