force-app/main/default/objects/Location_Address__c/fields/Web_Name__c.field-meta.xml
<CustomField>
    <fullName>Web_Name__c</fullName>
    <description>City name that is used to display on the site</description>
    <label>Web Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>