force-app/main/default/objects/Location_Address__c/validationRules/Require_All_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_All_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
 ISBLANK(Address_1__c),
 ISBLANK(City__c),
 ISPICKVAL(Province__c, &quot;&quot;),
 ISBLANK(Postal_Code__c),
 ISPICKVAL(Country__c, &quot;&quot;)
)</errorConditionFormula>
    <errorMessage>Location Address requires all fields to be valid (Address 1, City, Province, Postal Code, Country)</errorMessage>
</ValidationRule>