force-app/main/default/objects/Location_Address__c/validationRules/US_Zip_Code_Regex.validationRule-meta.xml
<ValidationRule>
    <fullName>US_Zip_Code_Regex</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISPICKVAL(Country__c, &apos;United States&apos;),
NOT(REGEX( Postal_Code__c, &quot;^[0-9]{5}(?:-[0-9]{4})?$&quot;))
)</errorConditionFormula>
    <errorMessage>Enter a valid United States ZIP code! (ex. 90210 or 90210-1234)</errorMessage>
</ValidationRule>