force-app/main/default/objects/Location_Address__c/listViews/IH_3P_Locations.listView-meta.xml
<ListView>
    <fullName>IH_3P_Locations</fullName>
    <columns>NAME</columns>
    <columns>Address__c</columns>
    <columns>City__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>IHTPOSHT__c</columns>
    <columns>Use_Count__c</columns>
    <columns>Postal_Code__c</columns>
    <columns>Web_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IHTPOSHT__c</field>
        <operation>equals</operation>
        <value>IH,3P</value>
    </filters>
    <filters>
        <field>Web_Name__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>IH &amp; 3P Locations</label>
</ListView>